customer get code
