# customer/api/customer/customer.pb.go
@@ -2,7 +2,7 @@
 // versions:
 // 	protoc-gen-go v1.31.0
 // 	protoc        v4.24.3
-// source: customer.proto
+// source: api/customer/customer.proto
 
 ///kratos:clients
 
@@ -34,7 +34,7 @@ type GetCustomerRequest struct {
 func (x *GetCustomerRequest) Reset() {
 	*x = GetCustomerRequest{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_customer_proto_msgTypes[0]
+		mi := &file_api_customer_customer_proto_msgTypes[0]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -47,7 +47,7 @@ func (x *GetCustomerRequest) String() string {
 func (*GetCustomerRequest) ProtoMessage() {}
 
 func (x *GetCustomerRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_customer_proto_msgTypes[0]
+	mi := &file_api_customer_customer_proto_msgTypes[0]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -60,7 +60,7 @@ func (x *GetCustomerRequest) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use GetCustomerRequest.ProtoReflect.Descriptor instead.
 func (*GetCustomerRequest) Descriptor() ([]byte, []int) {
-	return file_customer_proto_rawDescGZIP(), []int{0}
+	return file_api_customer_customer_proto_rawDescGZIP(), []int{0}
 }
 
 func (x *GetCustomerRequest) GetTelephone() string {
@@ -75,15 +75,17 @@ type GetCustomerReply struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Code    int32  `protobuf:"varint,1,opt,name=Code,proto3" json:"Code,omitempty"`
-	Message string `protobuf:"bytes,2,opt,name=Message,proto3" json:"Message,omitempty"`
-	Data    string `protobuf:"bytes,3,opt,name=Data,proto3" json:"Data,omitempty"`
+	Code           int32  `protobuf:"varint,1,opt,name=Code,proto3" json:"Code,omitempty"`
+	Message        string `protobuf:"bytes,2,opt,name=Message,proto3" json:"Message,omitempty"`
+	VerifyCode     string `protobuf:"bytes,3,opt,name=verify_code,json=verifyCode,proto3" json:"verify_code,omitempty"`
+	VerifyCodeTime int64  `protobuf:"varint,4,opt,name=verify_code_time,json=verifyCodeTime,proto3" json:"verify_code_time,omitempty"`
+	VerifyCodeLife int64  `protobuf:"varint,5,opt,name=verify_code_life,json=verifyCodeLife,proto3" json:"verify_code_life,omitempty"`
 }
 
 func (x *GetCustomerReply) Reset() {
 	*x = GetCustomerReply{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_customer_proto_msgTypes[1]
+		mi := &file_api_customer_customer_proto_msgTypes[1]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -96,7 +98,7 @@ func (x *GetCustomerReply) String() string {
 func (*GetCustomerReply) ProtoMessage() {}
 
 func (x *GetCustomerReply) ProtoReflect() protoreflect.Message {
-	mi := &file_customer_proto_msgTypes[1]
+	mi := &file_api_customer_customer_proto_msgTypes[1]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -109,7 +111,7 @@ func (x *GetCustomerReply) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use GetCustomerReply.ProtoReflect.Descriptor instead.
 func (*GetCustomerReply) Descriptor() ([]byte, []int) {
-	return file_customer_proto_rawDescGZIP(), []int{1}
+	return file_api_customer_customer_proto_rawDescGZIP(), []int{1}
 }
 
 func (x *GetCustomerReply) GetCode() int32 {
@@ -126,60 +128,82 @@ func (x *GetCustomerReply) GetMessage() string {
 	return ""
 }
 
-func (x *GetCustomerReply) GetData() string {
+func (x *GetCustomerReply) GetVerifyCode() string {
 	if x != nil {
-		return x.Data
+		return x.VerifyCode
 	}
 	return ""
 }
 
-var File_customer_proto protoreflect.FileDescriptor
+func (x *GetCustomerReply) GetVerifyCodeTime() int64 {
+	if x != nil {
+		return x.VerifyCodeTime
+	}
+	return 0
+}
 
-var file_customer_proto_rawDesc = []byte{
-	0x0a, 0x0e, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x12, 0x0c, 0x61, 0x70, 0x69, 0x2e, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x1a, 0x1c,
-	0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74,
-	0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x32, 0x0a, 0x12,
-	0x47, 0x65, 0x74, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65,
-	0x73, 0x74, 0x12, 0x1c, 0x0a, 0x09, 0x54, 0x65, 0x6c, 0x65, 0x70, 0x68, 0x6f, 0x6e, 0x65, 0x18,
-	0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x54, 0x65, 0x6c, 0x65, 0x70, 0x68, 0x6f, 0x6e, 0x65,
-	0x22, 0x54, 0x0a, 0x10, 0x47, 0x65, 0x74, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x52,
-	0x65, 0x70, 0x6c, 0x79, 0x12, 0x12, 0x0a, 0x04, 0x43, 0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x05, 0x52, 0x04, 0x43, 0x6f, 0x64, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x4d, 0x65, 0x73, 0x73,
-	0x61, 0x67, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x4d, 0x65, 0x73, 0x73, 0x61,
-	0x67, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x44, 0x61, 0x74, 0x61, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09,
-	0x52, 0x04, 0x44, 0x61, 0x74, 0x61, 0x32, 0x7e, 0x0a, 0x08, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d,
-	0x65, 0x72, 0x12, 0x72, 0x0a, 0x0b, 0x47, 0x65, 0x74, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65,
+func (x *GetCustomerReply) GetVerifyCodeLife() int64 {
+	if x != nil {
+		return x.VerifyCodeLife
+	}
+	return 0
+}
+
+var File_api_customer_customer_proto protoreflect.FileDescriptor
+
+var file_api_customer_customer_proto_rawDesc = []byte{
+	0x0a, 0x1b, 0x61, 0x70, 0x69, 0x2f, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x2f, 0x63,
+	0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x0c, 0x61,
+	0x70, 0x69, 0x2e, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x1a, 0x1c, 0x67, 0x6f, 0x6f,
+	0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69,
+	0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x32, 0x0a, 0x12, 0x47, 0x65, 0x74,
+	0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12,
+	0x1c, 0x0a, 0x09, 0x54, 0x65, 0x6c, 0x65, 0x70, 0x68, 0x6f, 0x6e, 0x65, 0x18, 0x01, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x09, 0x54, 0x65, 0x6c, 0x65, 0x70, 0x68, 0x6f, 0x6e, 0x65, 0x22, 0xb5, 0x01,
+	0x0a, 0x10, 0x47, 0x65, 0x74, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x52, 0x65, 0x70,
+	0x6c, 0x79, 0x12, 0x12, 0x0a, 0x04, 0x43, 0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05,
+	0x52, 0x04, 0x43, 0x6f, 0x64, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67,
+	0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65,
+	0x12, 0x1f, 0x0a, 0x0b, 0x76, 0x65, 0x72, 0x69, 0x66, 0x79, 0x5f, 0x63, 0x6f, 0x64, 0x65, 0x18,
+	0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0a, 0x76, 0x65, 0x72, 0x69, 0x66, 0x79, 0x43, 0x6f, 0x64,
+	0x65, 0x12, 0x28, 0x0a, 0x10, 0x76, 0x65, 0x72, 0x69, 0x66, 0x79, 0x5f, 0x63, 0x6f, 0x64, 0x65,
+	0x5f, 0x74, 0x69, 0x6d, 0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x03, 0x52, 0x0e, 0x76, 0x65, 0x72,
+	0x69, 0x66, 0x79, 0x43, 0x6f, 0x64, 0x65, 0x54, 0x69, 0x6d, 0x65, 0x12, 0x28, 0x0a, 0x10, 0x76,
+	0x65, 0x72, 0x69, 0x66, 0x79, 0x5f, 0x63, 0x6f, 0x64, 0x65, 0x5f, 0x6c, 0x69, 0x66, 0x65, 0x18,
+	0x05, 0x20, 0x01, 0x28, 0x03, 0x52, 0x0e, 0x76, 0x65, 0x72, 0x69, 0x66, 0x79, 0x43, 0x6f, 0x64,
+	0x65, 0x4c, 0x69, 0x66, 0x65, 0x32, 0x8a, 0x01, 0x0a, 0x08, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d,
+	0x65, 0x72, 0x12, 0x7e, 0x0a, 0x0b, 0x47, 0x65, 0x74, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65,
 	0x72, 0x12, 0x20, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72,
 	0x2e, 0x47, 0x65, 0x74, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75,
 	0x65, 0x73, 0x74, 0x1a, 0x1e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d,
 	0x65, 0x72, 0x2e, 0x47, 0x65, 0x74, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x52, 0x65,
-	0x70, 0x6c, 0x79, 0x22, 0x21, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1b, 0x12, 0x19, 0x2f, 0x63, 0x75,
+	0x70, 0x6c, 0x79, 0x22, 0x2d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x27, 0x12, 0x25, 0x2f, 0x63, 0x75,
 	0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x2f, 0x67, 0x65, 0x74, 0x2d, 0x76, 0x65, 0x72, 0x69, 0x66,
-	0x79, 0x2d, 0x63, 0x6f, 0x64, 0x65, 0x42, 0x30, 0x0a, 0x0c, 0x61, 0x70, 0x69, 0x2e, 0x63, 0x75,
-	0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x50, 0x01, 0x5a, 0x1e, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d,
-	0x65, 0x72, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x3b,
-	0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x79, 0x2d, 0x63, 0x6f, 0x64, 0x65, 0x2f, 0x7b, 0x54, 0x65, 0x6c, 0x65, 0x70, 0x68, 0x6f, 0x6e,
+	0x65, 0x7d, 0x42, 0x30, 0x0a, 0x0c, 0x61, 0x70, 0x69, 0x2e, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d,
+	0x65, 0x72, 0x50, 0x01, 0x5a, 0x1e, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x2f, 0x61,
+	0x70, 0x69, 0x2f, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x3b, 0x63, 0x75, 0x73, 0x74,
+	0x6f, 0x6d, 0x65, 0x72, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
-	file_customer_proto_rawDescOnce sync.Once
-	file_customer_proto_rawDescData = file_customer_proto_rawDesc
+	file_api_customer_customer_proto_rawDescOnce sync.Once
+	file_api_customer_customer_proto_rawDescData = file_api_customer_customer_proto_rawDesc
 )
 
-func file_customer_proto_rawDescGZIP() []byte {
-	file_customer_proto_rawDescOnce.Do(func() {
-		file_customer_proto_rawDescData = protoimpl.X.CompressGZIP(file_customer_proto_rawDescData)
+func file_api_customer_customer_proto_rawDescGZIP() []byte {
+	file_api_customer_customer_proto_rawDescOnce.Do(func() {
+		file_api_customer_customer_proto_rawDescData = protoimpl.X.CompressGZIP(file_api_customer_customer_proto_rawDescData)
 	})
-	return file_customer_proto_rawDescData
+	return file_api_customer_customer_proto_rawDescData
 }
 
-var file_customer_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
-var file_customer_proto_goTypes = []interface{}{
+var file_api_customer_customer_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_customer_customer_proto_goTypes = []interface{}{
 	(*GetCustomerRequest)(nil), // 0: api.customer.GetCustomerRequest
 	(*GetCustomerReply)(nil),   // 1: api.customer.GetCustomerReply
 }
-var file_customer_proto_depIdxs = []int32{
+var file_api_customer_customer_proto_depIdxs = []int32{
 	0, // 0: api.customer.Customer.GetCustomer:input_type -> api.customer.GetCustomerRequest
 	1, // 1: api.customer.Customer.GetCustomer:output_type -> api.customer.GetCustomerReply
 	1, // [1:2] is the sub-list for method output_type
@@ -189,13 +213,13 @@ var file_customer_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for field type_name
 }
 
-func init() { file_customer_proto_init() }
-func file_customer_proto_init() {
-	if File_customer_proto != nil {
+func init() { file_api_customer_customer_proto_init() }
+func file_api_customer_customer_proto_init() {
+	if File_api_customer_customer_proto != nil {
 		return
 	}
 	if !protoimpl.UnsafeEnabled {
-		file_customer_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+		file_api_customer_customer_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*GetCustomerRequest); i {
 			case 0:
 				return &v.state
@@ -207,7 +231,7 @@ func file_customer_proto_init() {
 				return nil
 			}
 		}
-		file_customer_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+		file_api_customer_customer_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*GetCustomerReply); i {
 			case 0:
 				return &v.state
@@ -224,18 +248,18 @@ func file_customer_proto_init() {
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_customer_proto_rawDesc,
+			RawDescriptor: file_api_customer_customer_proto_rawDesc,
 			NumEnums:      0,
 			NumMessages:   2,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
-		GoTypes:           file_customer_proto_goTypes,
-		DependencyIndexes: file_customer_proto_depIdxs,
-		MessageInfos:      file_customer_proto_msgTypes,
+		GoTypes:           file_api_customer_customer_proto_goTypes,
+		DependencyIndexes: file_api_customer_customer_proto_depIdxs,
+		MessageInfos:      file_api_customer_customer_proto_msgTypes,
 	}.Build()
-	File_customer_proto = out.File
-	file_customer_proto_rawDesc = nil
-	file_customer_proto_goTypes = nil
-	file_customer_proto_depIdxs = nil
+	File_api_customer_customer_proto = out.File
+	file_api_customer_customer_proto_rawDesc = nil
+	file_api_customer_customer_proto_goTypes = nil
+	file_api_customer_customer_proto_depIdxs = nil
 }
