# customer/internal/server/http.go
@@ -1,17 +1,19 @@
 package server
 
 import (
+	"customer/api/customer"
 	v1 "customer/api/helloworld/v1"
 	"customer/internal/conf"
 	"customer/internal/service"
-
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, greeter *service.GreeterService,
+	customerService *service.CustomerService,
+	logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -28,5 +30,7 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 	}
 	srv := http.NewServer(opts...)
 	v1.RegisterGreeterHTTPServer(srv, greeter)
+	// 注册customerService 服务
+	customer.RegisterCustomerHTTPServer(srv, customerService)
 	return srv
 }
