# customer/openapi.yaml
@@ -3,18 +3,20 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
-    description: The greeting service definition.
+    title: Customer API
     version: 0.0.1
 paths:
-    /helloworld/{name}:
+    /customer/get-verify-code/{Telephone}:
         get:
             tags:
-                - Greeter
-            description: Sends a greeting
-            operationId: Greeter_SayHello
+                - Customer
+            description: |-
+                rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerReply);
+                	rpc UpdateCustomer (UpdateCustomerRequest) returns (UpdateCustomerReply);
+                	rpc DeleteCustomer (DeleteCustomerRequest) returns (DeleteCustomerReply);
+            operationId: Customer_GetCustomer
             parameters:
-                - name: name
+                - name: Telephone
                   in: path
                   required: true
                   schema:
@@ -25,14 +27,52 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
+                                $ref: '#/components/schemas/GetCustomerReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
-        helloworld.v1.HelloReply:
+        GetCustomerReply:
             type: object
             properties:
+                Code:
+                    type: integer
+                    format: int32
+                Message:
+                    type: string
+                verifyCode:
+                    type: string
+                verifyCodeTime:
+                    type: string
+                verifyCodeLife:
+                    type: string
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
                 message:
                     type: string
-            description: The response message containing the greetings
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
-    - name: Greeter
+    - name: Customer
